@@ -6,6 +6,8 @@
 #ifndef _MSWSOCK_
 #define _MSWSOCK_
 
+#include <winsock2.h>
+
 #ifdef __cplusplus
 extern "C" {
 #endif
